--- a/index.html
+++ b/index.html
@@ -32,22 +32,27 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="images/PhiPhiIslands.jpg" class="d-block w-100" 
-	  data-bs-toggle="tooltip" data-bs-placement="top" title="Phi Phi Islands">
+	    data-bs-toggle="tooltip" data-bs-placement="top" title="Phi Phi Islands">
     </div>
     <div class="carousel-item">
-      <img src="images/Sukhothai.jpg" class="d-block w-100">
+      <img src="images/Sukhothai.jpg" class="d-block w-100"
+      data-bs-toggle="tooltip" data-bs-placement="top" title="Sukhothai Historical Park">>
     </div>
     <div class="carousel-item">
-      <img src="images/PhangNga.jpg" class="d-block w-100">
+      <img src="images/PhangNga.jpg" class="d-block w-100"
+      data-bs-toggle="tooltip" data-bs-placement="top" title="Ko Ta Pu">>
     </div>
     <div class="carousel-item">
-      <img src="images/HuaHin.jpg" class="d-block w-100">
+      <img src="images/HuaHin.jpg" class="d-block w-100"
+      data-bs-toggle="tooltip" data-bs-placement="top" title="HuaHin">>
     </div>
     <div class="carousel-item">
-      <img src="images/Ayutthaya.jpg" class="d-block w-100">
+      <img src="images/Ayutthaya.jpg" class="d-block w-100"
+      data-bs-toggle="tooltip" data-bs-placement="top" title="Ayutthaya">>
     </div>
     <div class="carousel-item">
-      <img src="images/FloatingMarket.jpg" class="d-block w-100">
+      <img src="images/FloatingMarket.jpg" class="d-block w-100"
+      data-bs-toggle="tooltip" data-bs-placement="top" title="Damnoen saduak floating market">>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#imageSlider" data-bs-slide="prev">
@@ -58,6 +63,31 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+  <script>
+    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+    var tooltipList = tooltipTriggerList.map(function (el) {
+    return new bootstrap.Tooltip(el, {
+      trigger: 'manual', 
+      placement: 'top'
+      });
+    });
+
+    tooltipTriggerList.forEach(function(el, index){
+      el.addEventListener('click', function(){
+        tooltipList.forEach(function(t){
+          t.hide();
+        });
+        tooltipList[index].show();
+      });
+    });
+
+    var carousel = document.getElementById('imageSlider');
+    carousel.addEventListener('slid.bs.carousel', function () {
+      tooltipList.forEach(function(t){
+        t.hide();
+      });
+    });
+  </script>
 </div>
 </body>
 </html>
